Fixing errors in build from moving files around

--- a/demo-project/HomeAutomation.html
+++ b/demo-project/HomeAutomation.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- SDK REFERENCE -->
-    <script src="../../distrib/speech.sdk.bundle.js"></script>
+    <script src="../distrib/speech.sdk.bundle.js"></script>
 
     <!-- SDK USAGE -->
     <script>
@@ -49,7 +49,7 @@
                 onComplete(window.SDK);
             }
         }
-        
+
         // Setup the recognizer
         function RecognizerSetup(SDK, subscriptionKey) {
             var recognizerConfig = new SDK.RecognizerConfig(
@@ -63,7 +63,7 @@
 
 
             var useTokenAuth = false;
-            
+
             var authentication = function() {
                 if (!useTokenAuth)
                     return new SDK.CognitiveSubscriptionKeyAuthentication(subscriptionKey);
@@ -185,7 +185,7 @@
                     RecognizerStart(SDK, recognizer);
                     startBtn.disabled = true;
                     stopBtn.disabled = false;
-                }                
+                }
             });
 
             speechKey.addEventListener("focus", function () {
@@ -224,9 +224,9 @@
         }
 
         function UpdateRecognizedHypothesis(text, append) {
-        /*    if (append) 
+        /*    if (append)
                 hypothesisDiv.innerHTML += text + " ";
-            else 
+            else
                 hypothesisDiv.innerHTML = text;
 
             var length = hypothesisDiv.innerHTML.length;
