Include script in HTML

--- a/demo-project/HomeAutomation.html
+++ b/demo-project/HomeAutomation.html
@@ -36,6 +36,8 @@
         </table>
     </div>
 
+    <script src="house.js"></script>
+
     <!-- SDK REFERENCE -->
     <script src="../../distrib/speech.sdk.bundle.js"></script>
 
