--- a/home-automation/HomeAutomation.html
+++ b/home-automation/HomeAutomation.html
@@ -39,7 +39,7 @@
     <script src="house.js"></script>
 
     <!-- SDK REFERENCE -->
-    <script src="../distrib/speech.sdk.bundle.js"></script>
+    <script src="../azure-speech-web-sdk/distrib/speech.sdk.bundle.js"></script>
 
     <!-- SDK USAGE -->
     <script>
