--- a/home-automation/HomeAutomation.html
+++ b/home-automation/HomeAutomation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Speech Sample</title>
+    <title>Home Automation</title>
     <meta charset="utf-8" />
 </head>
 <body style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif; font-size:13px;">
