--- a/home-automation/HomeAutomation.html
+++ b/home-automation/HomeAutomation.html
@@ -20,11 +20,11 @@
             </tr>
             <tr>
                 <td align="right"><a href="https://www.microsoft.com/cognitive-services/en-us/sign-up" target="_blank">Speech Subscription</a>:</td>
-                <td><input id="SpeechKey" type="text" size="40" value="YOUR_BING_SPEECH_API_KEY"></td>
+                <td><input id="SpeechKey" type="text" size="40"></td>
             </tr>
             <tr>
                 <td align="right"><a href="https://www.microsoft.com/cognitive-services/en-us/sign-up" target="_blank">LUIS Subscription</a>:</td>
-                <td><input id="LuisKey" type="text" size="40" value="YOUR_LUIS_API_KEY"></td>
+                <td><input id="LuisKey" type="text" size="40"></td>
             </tr>
             <tr>
                 <td align="right">Command:</td>
@@ -109,7 +109,10 @@
     </script>
 
     <!-- Speech SDK integration -->
-    <script>
+    <script type="application/javascript">
+        const speechKeyDefaultText = "Enter your subscription key for Bing Speech";
+        const luisKeyDefaultText = "Enter your subscription key for LUIS";
+
         let startBtn;
         let stopBtn;
         let speechKey;
@@ -123,10 +126,34 @@
             startBtn = document.getElementById("startBtn");
             stopBtn = document.getElementById("stopBtn");
             speechKey = document.getElementById("SpeechKey");
+            luisKey = document.getElementById("LuisKey");
+
+            // Set some default text on a field that gets hidden when it has focus
+            function setDefaultText(field, defaultText) {
+                field.value = defaultText;
+                field.addEventListener("focus", function () {
+                    if (field.value === defaultText) {
+                        field.value = "";
+                    }
+                });
+                field.addEventListener("focusout", function () {
+                    if (!field.value) {
+                        field.value = defaultText;
+                    }
+                });
+            }
+
+            setDefaultText(speechKey, speechKeyDefaultText);
+            setDefaultText(luisKey, luisKeyDefaultText);
 
             startBtn.addEventListener("click", function () {
-                if (!speechKey.value || speechKey.value === "YOUR_BING_SPEECH_API_KEY") {
+                if (!speechKey.value || speechKey.value === speechKeyDefaultText) {
                     alert("Please enter your Bing Speech subscription key!");
+                    return;
+                }
+
+                if (!luisKey.value || luisKey.value === luisKeyDefaultText) {
+                    alert("Please enter your LUIS subscription key!");
                     return;
                 }
 
@@ -142,16 +169,6 @@
                 speechRecognizer.start(recognizer);
                 startBtn.disabled = true;
                 stopBtn.disabled = false;
-            });
-            speechKey.addEventListener("focus", function () {
-                if (speechKey.value === "YOUR_BING_SPEECH_API_KEY") {
-                    speechKey.value = "";
-                }
-            });
-            speechKey.addEventListener("focusout", function () {
-                if (!speechKey.value) {
-                    speechKey.value = "YOUR_BING_SPEECH_API_KEY";
-                }
             });
             stopBtn.addEventListener("click", function () {
                 speechRecognizer.stop(recognizer);
